src/component/ZiltagPreview/index.css
.ziltag-ziltag-preview {
  position: relative;
  width: 264px;
  min-height: 60px;
  padding: 12px;
  font-size: 12px;
  line-height: 1.5;
  box-sizing: border-box;
}

.ziltag-ziltag-preview__author {
  color: rgb(151, 151, 151);
}

.ziltag-ziltag-preview__content {
  color: rgb(51, 51, 51);
}

